# spotme

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
alembic/: env.py
alembic/versions/: 002_whoop_v04.py  fa1934893c73_add_training_log_table.py
deploy/: spotme-morning.service  spotme-morning.timer  spotme-whoop-sync.service  spotme-whoop-sync.timer  spotme.service
docs/: whoop-write-api-v0.2.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  api.ts  db.ts  index.css  types.ts
server/: CLAUDE.md  cli.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
server/routes/: chat.py  chat_stream.py  interview.py  layout.py  meals.py  morning.py  profile.py  program.py  progress.py  video.py  whoop.py  workout.py
server/scripts/: morning_briefing.py
server/services/: claude_service.py  layout_service.py  video_service.py  (+6 more)
tests/: test_chat.py  test_chat_session.py  test_claude_sdk.py  test_complete_set.py  test_daily_chat.py  test_database.py  test_history_prs.py  test_layout.py  test_meals.py  test_meals_day.py  test_morning.py  test_program.py  test_program_week.py  test_progress.py  test_sequencer.py  test_session_calls.py  test_session_manager.py  test_training_log.py  test_utils.py  test_video.py  test_whoop.py  test_whoop_tools.py  test_workout.py
(+54 files in other folders)
